# fastapi-jinja-template

./: .cursorrules  .editorconfig  .gitignore  README.md  env.example  pyproject.toml
src/: auth.py  config.py  database.py  main.py  scripts.py  web_routes.py
src/api/: admin.py  ai.py  attendance.py  auth.py  events.py  image_converter.py  members.py
src/models/: __init__.py  attendance.py  base.py  events.py  members.py  users.py
src/repositories/: attendance.py  base.py  books.py  events.py  members.py  quotes.py  users.py
src/scripts/: init_church_data.py
src/services/: ai_insight.py  attendance.py  events.py  insights.py  members.py  users.py
src/services/tagging/: __init__.py  base.py  gemini.py  local_ai.py
src/static/css/: custom.css
src/templates/: base.html  landing.html
src/templates/activities/: dashboard.html
src/templates/admin/: backup.html  dashboard.html  users.html
src/templates/attendance/: create.html  dashboard.html  edit.html  list.html  view.html
src/templates/auth/: login.html  profile.html  register.html
src/templates/components/: modal.html
src/templates/dashboard/: dashboard.html
src/templates/events/: calendars.html  create.html  dashboard.html  edit.html  list.html  past.html  today.html  view.html
src/templates/members/: create.html  dashboard.html  edit.html  list.html  view.html
src/tests/: conftest.py  test_activities.py  test_api.py  test_attendance.py  test_members.py  test_models.py  test_repositories.py  test_services.py
src/tests/factories/: base.py  user.py
src/utils/: date.py
